# continuum-robot

./: CMakeLists.txt  continuumBuild.sh
include/: VariableCurvatureRobot.h
lib/: CMakeLists.txt
lib/continuum/: .gitignore  CMakeLists.txt
lib/continuum/include/Continuum/: Continuum.h  ContinuumUtils.h  Tube.h
lib/continuum/src/: CMakeLists.txt  Continuum.cpp  ContinuumUtils.cpp  Tube.cpp
lib/continuum/test/: CMakeLists.txt
src/: VariableCurvatureRobot.cpp
test/: 3linkTest.cpp  CMakeLists.txt  SpiralData.h
wasm/: CMakeLists.txt  moduleContinuum.cpp  unused.cpp
